--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 					<div class="container">
 						<div class="row">
 							<h1 class="to-animate">Food On Wheels</h1>
+							<img src="images/noun_food trailer_1587170 orange.png" alt="" width="30%">
 							<h2 class="to-animate">Lovely Designed <span>by</span> <a href="http://freehtml5.co/" target="_blank">freehtml5.co</a></h2>
 						</div>
 					</div>
