--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 					</div>
 					<div class="fh5co-menu-2">
 						<a href="#" data-nav-section="menu">Menu</a>
-						<a href="#" data-nav-section="events">Events</a>
+						<a href="#" data-nav-section="Socials">Socials</a>
 						<a href="#" data-nav-section="reservation">Reservation</a>
 					</div>
 				</div>
